// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionStringEdit matches snapshot in Add Scenario 1`] = `
<OverlayDrawer
  onOpenChange={[Function]}
  open={true}
  position="end"
  size="medium"
>
  <DrawerHeader>
    <DrawerHeaderTitle
      action={
        <Button
          appearance="subtle"
          aria-label="connectionStrings.editConnection.cancel.ariaLabel.add"
          icon={<DismissRegular />}
          onClick={[Function]}
        />
      }
    >
      <span
        style={
          {
            "display": "block",
            "textAlign": "right",
          }
        }
      >
        connectionStrings.editConnection.title.add
      </span>
    </DrawerHeaderTitle>
  </DrawerHeader>
  <DrawerBody>
    <div
      className="connection-string-edit-body"
    >
      <Field
        label={
          <Label
            weight="semibold"
          >
            connectionStrings.editConnection.editField.label
          </Label>
        }
        required={true}
        validationState="none"
      >
        <Textarea
          aria-label="connectionStrings.editConnection.editField.ariaLabel"
          onChange={[Function]}
          placeholder="connectionStrings.editConnection.editField.placeholder"
          rows={8}
          value=""
        />
      </Field>
      <Link
        href="connectivityPane.connectionStringComboBox.link"
        target="_blank"
      >
        connectivityPane.connectionStringComboBox.linkText
      </Link>
      <div>
        <span>
          connectivityPane.connectionStringComboBox.warning
        </span>
      </div>
    </div>
  </DrawerBody>
  <DrawerFooter>
    <Button
      appearance="primary"
      aria-label="connectionStrings.editConnection.save.ariaLabel"
      disabled={true}
      onClick={[Function]}
    >
      connectionStrings.editConnection.save.label
    </Button>
    <Button
      aria-label="connectionStrings.editConnection.cancel.ariaLabel.add"
      onClick={[Function]}
    >
      connectionStrings.editConnection.cancel.label
    </Button>
  </DrawerFooter>
</OverlayDrawer>
`;

exports[`ConnectionStringEdit matches snapshot in Edit / invalid scenario 1`] = `
<OverlayDrawer
  onOpenChange={[Function]}
  open={true}
  position="end"
  size="medium"
>
  <DrawerHeader>
    <DrawerHeaderTitle
      action={
        <Button
          appearance="subtle"
          aria-label="connectionStrings.editConnection.cancel.ariaLabel.edit"
          icon={<DismissRegular />}
          onClick={[Function]}
        />
      }
    >
      <span
        style={
          {
            "display": "block",
            "textAlign": "right",
          }
        }
      >
        connectionStrings.editConnection.title.edit
      </span>
    </DrawerHeaderTitle>
  </DrawerHeader>
  <DrawerBody>
    <div
      className="connection-string-edit-body"
    >
      <Field
        label={
          <Label
            weight="semibold"
          >
            connectionStrings.editConnection.editField.label
          </Label>
        }
        required={true}
        validationState="none"
      >
        <Textarea
          aria-label="connectionStrings.editConnection.editField.ariaLabel"
          onChange={[Function]}
          placeholder="connectionStrings.editConnection.editField.placeholder"
          rows={8}
          value="connectionString"
        />
      </Field>
      <Link
        href="connectivityPane.connectionStringComboBox.link"
        target="_blank"
      >
        connectivityPane.connectionStringComboBox.linkText
      </Link>
      <div>
        <span>
          connectivityPane.connectionStringComboBox.warning
        </span>
      </div>
    </div>
  </DrawerBody>
  <DrawerFooter>
    <Button
      appearance="primary"
      aria-label="connectionStrings.editConnection.save.ariaLabel"
      disabled={true}
      onClick={[Function]}
    >
      connectionStrings.editConnection.save.label
    </Button>
    <Button
      aria-label="connectionStrings.editConnection.cancel.ariaLabel.edit"
      onClick={[Function]}
    >
      connectionStrings.editConnection.cancel.label
    </Button>
  </DrawerFooter>
</OverlayDrawer>
`;

exports[`ConnectionStringEdit matches snapshot in Edit / valid scenario 1`] = `
<OverlayDrawer
  onOpenChange={[Function]}
  open={true}
  position="end"
  size="medium"
>
  <DrawerHeader>
    <DrawerHeaderTitle
      action={
        <Button
          appearance="subtle"
          aria-label="connectionStrings.editConnection.cancel.ariaLabel.edit"
          icon={<DismissRegular />}
          onClick={[Function]}
        />
      }
    >
      <span
        style={
          {
            "display": "block",
            "textAlign": "right",
          }
        }
      >
        connectionStrings.editConnection.title.edit
      </span>
    </DrawerHeaderTitle>
  </DrawerHeader>
  <DrawerBody>
    <div
      className="connection-string-edit-body"
    >
      <Field
        label={
          <Label
            weight="semibold"
          >
            connectionStrings.editConnection.editField.label
          </Label>
        }
        required={true}
        validationState="none"
      >
        <Textarea
          aria-label="connectionStrings.editConnection.editField.ariaLabel"
          onChange={[Function]}
          placeholder="connectionStrings.editConnection.editField.placeholder"
          rows={8}
          value="HostName=test.azure-devices-int.net;SharedAccessKeyName=iothubowner;SharedAccessKey=key"
        />
      </Field>
      <Link
        href="connectivityPane.connectionStringComboBox.link"
        target="_blank"
      >
        connectivityPane.connectionStringComboBox.linkText
      </Link>
      <div>
        <span>
          connectivityPane.connectionStringComboBox.warning
        </span>
      </div>
    </div>
  </DrawerBody>
  <DrawerFooter>
    <Button
      appearance="primary"
      aria-label="connectionStrings.editConnection.save.ariaLabel"
      disabled={true}
      onClick={[Function]}
    >
      connectionStrings.editConnection.save.label
    </Button>
    <Button
      aria-label="connectionStrings.editConnection.cancel.ariaLabel.edit"
      onClick={[Function]}
    >
      connectionStrings.editConnection.cancel.label
    </Button>
  </DrawerFooter>
</OverlayDrawer>
`;

exports[`ConnectionStringEdit matches snapshot in Edit Scenario 1`] = `
<OverlayDrawer
  onOpenChange={[Function]}
  open={true}
  position="end"
  size="medium"
>
  <DrawerHeader>
    <DrawerHeaderTitle
      action={
        <Button
          appearance="subtle"
          aria-label="connectionStrings.editConnection.cancel.ariaLabel.edit"
          icon={<DismissRegular />}
          onClick={[Function]}
        />
      }
    >
      <span
        style={
          {
            "display": "block",
            "textAlign": "right",
          }
        }
      >
        connectionStrings.editConnection.title.edit
      </span>
    </DrawerHeaderTitle>
  </DrawerHeader>
  <DrawerBody>
    <div
      className="connection-string-edit-body"
    >
      <Field
        label={
          <Label
            weight="semibold"
          >
            connectionStrings.editConnection.editField.label
          </Label>
        }
        required={true}
        validationState="none"
      >
        <Textarea
          aria-label="connectionStrings.editConnection.editField.ariaLabel"
          onChange={[Function]}
          placeholder="connectionStrings.editConnection.editField.placeholder"
          rows={8}
          value="connectionString"
        />
      </Field>
      <Link
        href="connectivityPane.connectionStringComboBox.link"
        target="_blank"
      >
        connectivityPane.connectionStringComboBox.linkText
      </Link>
      <div>
        <span>
          connectivityPane.connectionStringComboBox.warning
        </span>
      </div>
    </div>
  </DrawerBody>
  <DrawerFooter>
    <Button
      appearance="primary"
      aria-label="connectionStrings.editConnection.save.ariaLabel"
      disabled={true}
      onClick={[Function]}
    >
      connectionStrings.editConnection.save.label
    </Button>
    <Button
      aria-label="connectionStrings.editConnection.cancel.ariaLabel.edit"
      onClick={[Function]}
    >
      connectionStrings.editConnection.cancel.label
    </Button>
  </DrawerFooter>
</OverlayDrawer>
`;
